welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:26: error: not found: value set
    set (n,l)
    ^